fix h2 not being text algined on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -67,7 +67,7 @@ h1 {
 }
 
 @media (max-width: 900px) {
-  h1 {
+  h2 {
     text-align: left;
   }
 }
